@@ -5,5 +5,6 @@
 - Example code
     - Creating and using GLFWgammaramp structure hashes
     - Creating and using GLFWimage structure hashes
+    - Convert GLFW examples to use perl
 - Add cbfun returns to set callback routines
     - need XS help to implement without SEGFAULT
